--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 theme: jekyll-theme-minimal
+title: lynn dong
+description: >
+  about me
+  - ☁️  cloud engineer
+  - 🏂 snowboarding enthusiast
+  - 🍞 carb addict
+  - 🏘 amateur real estate investor
+  - 💃🏻 dancer
+  - 💩 sensitive striver
+  - 👾 ex-gamer with semi-annual relapses
+  - ☕️ fueled by caffeine
